# full-duplex-voice-chat

./: .cirun.yml  .env.defaults  .env.example  .env.local.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile.orchestrator  Dockerfile.tts  Dockerfile.tts-cosyvoice  Dockerfile.web  MIGRATION_GUIDE.md  Procfile.agent  Procfile.dev  README.md  codecov.yml  docker-compose.full-stack.yml  docker-compose.monitoring.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml  pytest.ini
.claude/: README.md  SMART_LOADING.md  context-triggers.json  settings.local.json
.claude/agents/: COORDINATION.md
.claude/modules/: architecture.md  deployment.md  development.md  git-worktrees.md  milestones.md  testing.md
.claude/modules/adapters/: README.md  piper.md  template.md
.claude/modules/features/: asr.md  model-manager.md  session-management.md  vad.md
.env.models/: .env.cosyvoice2  .env.piper  README.md
.github/actions/setup-test-env/: action.yml
.github/workflows/: ci.yml  feature-ci.yml  main-baseline.yml  pr-ci.yml
configs/: livekit.yaml  orchestrator.docker.yaml  orchestrator.local.yaml  orchestrator.yaml  worker.yaml
docker/: Dockerfile.whisperx-gpu-test  entrypoint-orchestrator.sh  entrypoint-tts-cosyvoice.sh
docker/compose/: README.md  docker-compose.dev.yml  docker-compose.models.yml  docker-compose.yml
docs/: .gitkeep  CI_BACKLOG.md  CLI_CLIENT_GUIDE.md  CONFIGURATION.md  CONFIGURATION_REFERENCE.md  COSYVOICE_PYTORCH_CONFLICT.md  CUDA_COMPATIBILITY.md  CURRENT_STATUS.md  DEFAULT_MODEL_ENV_VAR.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_COSYVOICE.md  DOCKER_UNIFIED_WORKFLOW.md  GPU_CI_RESEARCH.md  HTTPS_SETUP.md  INFRASTRUCTURE_TESTING.md  LIVEKIT_SETUP.md  M11_INTEGRATION_EXAMPLE.md  M11_OBSERVABILITY.md  M12_DOCKER_POLISH.md  M3_VAD_INTEGRATION_SUMMARY.md  M9_ROUTING.md  MULTI_GPU.md  NETWORK_ACCESS.md  OBSERVABILITY.md  ORCHESTRATOR_MODES.md  ORCHESTRATOR_MODE_SELECTION_SUMMARY.md  PARALLEL_TTS.md  PERFORMANCE.md  PIPER_TECHNICAL_REFERENCE.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REDIS_CONFIGURATION.md  TESTING_GUIDE.md  UNIFIED_WORKFLOW_TESTING.md  USAGE_DOCKER_PIPER.md  USER_GUIDE.md  (+7 more)
docs/architecture/: ARCHITECTURE.md
docs/examples/: cosyvoice-config.json  cosyvoice-metadata.yaml  cosyvoice-speakers.json
docs/implementation/: session-protocol-fix.md
docs/known-issues/: README.md  grpc-segfault.md
docs/runbooks/: ADVANCED_TROUBLESHOOTING.md  AUDIO_BACKPRESSURE.md  AUDIO_QUALITY.md  ENVIRONMENT.md  GRPC_WORKER.md  LOG_DEBUGGING.md  MONITORING.md  PORT_CONFLICTS.md  REDIS.md  TEST_DEBUGGING.md  WEBSOCKET.md  test-repair-summary.md
docs/setup/: DOCKER_SETUP.md
examples/: README.md  audio_frame_handler.py  basic_websocket_client.py  grpc_worker_client.py  test_synthesis.py  worker_registration.py
monitoring/: prometheus-local.yml  prometheus.yml
monitoring/grafana/dashboards/: tts-metrics.json
project_documentation/: IMPLEMENTATION_MILESTONES_AND_TASKS_CHECKLIST.md  INCREMENTAL_IMPLEMENTATION_PLAN.md  M2_WEB_CLIENT_INTEGRATION.md  PRD.md  TDD.md
project_documentation/m6_design/: COSYVOICE2_ADAPTER_DESIGN.md
scripts/: benchmark_tts_parallel.py  check_cuda_compatibility.py  cosyvoice_docker_quick_start.sh  fix_test_imports.sh  parallel_synthesis_prototype.py  preflight-check.sh  setup_cosyvoice_voicepack.sh  test-connection.py  test-redis-config.sh  test_orchestrator_modes.sh  test_whisperx_gpu.py  update-ip.sh  validate-config.py  validate-startup.py
src/: __init__.py
src/asr/: __init__.py
src/asr/adapters/: __init__.py  adapter_whisper.py  adapter_whisperx.py
src/client/: README.md  __init__.py  cli_client.py
src/client/web/: .env.example  README.md  SETUP.md  USER_GUIDE.md  __init__.py  app-config.ts  package-lock.json  package.json
src/common/: __init__.py  types.py
src/orchestrator/: README.md  __init__.py  agent.py  asr.py  config.py  grpc_client.py  health.py  parallel_tts.py  registry.py  response_buffer.py  routing.py  server.py  session.py  telemetry.py  transcript_buffer.py  vad.py  vad_processor.py  worker_selector.py
src/orchestrator/audio/: __init__.py  buffer.py  resampler.py
src/orchestrator/livekit/: __init__.py
src/orchestrator/livekit_utils/: __init__.py  room_manager.py
src/orchestrator/transport/: __init__.py  livekit_transport.py  websocket_protocol.py  websocket_transport.py
src/plugins/grpc_tts/: __init__.py  parallel_wrapper.py  tts.py
src/plugins/whisperx/: stt.py
src/rpc/: README.md  tts.proto
src/tts/: README.md  __init__.py  __main__.py  config.py  health.py  model_manager.py  suppress_warnings.py  tts_base.py  worker.py  worker_main.py
src/tts/adapters/: __init__.py  adapter_cosyvoice.py  adapter_mock.py  (+1 more)
tests/: __init__.py
tests/helpers/: vad_test_utils.py
tests/integration/: BARGE_IN_TEST_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  conftest.py  test_barge_in_basic.py  test_barge_in_errors.py  test_barge_in_integration.py  test_barge_in_latency.py  test_barge_in_state_machine.py  test_cosyvoice_integration.py  test_dual_llm_agent.py  test_full_pipeline.py  test_livekit_e2e.py  test_m1_worker_integration.py  test_metrics_endpoint.py  test_model_lifecycle.py  test_multi_turn_conversation.py  test_parallel_synthesis.py  test_performance.py  test_piper_integration.py  test_redis_discovery.py  test_registry.py  test_unified_workflow.py  test_utils.py  test_vad_integration.py  test_websocket_e2e.py
tests/performance/: README.md  test_cosyvoice_streaming.py  test_parallel_tts_latency.py  test_performance.py
tests/unit/: test_adapter_piper.py  test_asr_base.py  test_audio_buffer.py  test_cli_client.py  test_config.py  test_default_model_env_var.py  test_livekit_transport.py  test_m1_proto.py  test_model_manager.py  test_placeholder.py  test_registry.py  test_rms_buffer.py  test_routing.py  test_session_manager.py  test_session_timeout.py  test_transport_interface.py  test_vad.py  test_websocket_transport.py
(+42 files in other folders)
