# Workspace Root Configuration
[project]
name = "realtime-duplex-voice-chat"
version = "0.1.0"
description = "Full duplex voice chat system with barge-in support - workspace root"
readme = "README.md"
requires-python = ">=3.12,<3.13"

# Root package has NO runtime dependencies
# This allows independent installations of service packages

[tool.uv.workspace]
members = [
    "packages/proto",
    "packages/common",
    "packages/tts-base",
    # Orchestrator and TTS adapters are NOT workspace members
    # They can be installed independently with their own dependencies
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-forked>=1.6.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "types-pyyaml>=6.0.0",
    "types-redis>=4.6.0",
    "honcho>=1.1.0",
]

# NO build-system section - this is a virtual package (workspace root only)
# Individual packages have their own build-system configurations

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["src/rpc/generated", "packages/proto/src/rpc/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
# Exclude generated code and test files with pre-existing type issues
exclude = [
    "src/rpc/generated",
    "packages/proto/src/rpc/generated",
    "tests/unit/orchestrator/test_parallel_tts.py",
    "tests/integration/test_parallel_synthesis.py",
    "tests/performance/test_parallel_tts_latency.py",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not performance",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Docker, Redis, etc.)",
    "docker: Tests requiring Docker (may skip if unavailable)",
    "redis: Tests requiring Redis container",
    "livekit: Tests requiring LiveKit container",
    "performance: Performance benchmark tests",
    "slow: Tests that take longer to run (> 5s)",
    "gpu: Tests requiring GPU hardware (may skip if unavailable)",
    "infrastructure: Infrastructure smoke tests (Docker Compose, justfile commands)",
    "ci_skip: Tests excluded from CI (flaky on shared runners)",
]

[tool.coverage.run]
relative_files = true
source = ["src", "packages"]
omit = [
    "src/rpc/generated/*",
    "packages/proto/src/rpc/generated/*",
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.anyio]
backends = ["asyncio"]

[dependency-groups]
dev = [
    "awscli>=1.42.59",
    "pytest-asyncio>=1.2.0",
    "pytest-forked>=1.6.0",
    "pytest-xdist>=3.5.0",
]
